# ai_company

./: .env.example  README.md  pyproject.toml
.claude/: CLAUDE.md  repo-rules.md
.claude/agents/: expert-agent.md  hr-agent.md  qa-agent.md  rm-agent.md  tool-agent.md
.claude/skills/ai-company/: SKILL.md
.claude/skills/ceo-agent/: SKILL.md
company/assets/: capture_detail_page.py  capture_premium.py  coupang_login.py  coupang_registration_guide.md  detail_page_premium.html  product_detail_page.html  smartstore_login.py
company/state/: agents.json  backlog.json  ceo_goal.json  ceo_request.json  hired_agents.json  projects.json  session.json  task_assignments.json  tasks.json  tool_selections.json  tool_validations.json
docs/: 1주차.md  2주차.md  3주차.md  4주차.md  project-backlog.md
docs/specs/: implementation-plan-v5.md  tool-discovery-strategy.md  보완계획.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: run_dev.sh  setup.sh
src/: __init__.py  cli.py  config.py  main.py
src/agents/: __init__.py  base.py  expert_factory.py  hr.py  rm.py
src/api/: __init__.py  server.py
src/communication/: __init__.py  a2a_protocol.py  human_interface.py
src/context/: __init__.py  checkpointer.py  memory.py  state.py
src/graph/: __init__.py  company_graph.py  edges.py  nodes.py
src/schemas/: __init__.py  agent.py  project.py  task.py
src/tools/: __init__.py  mcp_adapter.py  registry.py
tests/: __init__.py  conftest.py  test_e2e.py  test_memory.py  test_schemas.py  test_state.py  test_tools.py
(+14 files in other folders)
